src/test/java/com/uipath/sonar/plugin/testprojects/ValidateMainWorkflow/ShouldFail/.local/nuget.cache
{
  "version": 1,
  "dgSpecHash": "ae3diEb/YJLoCYIyDCxl8uI2JYCargl0rPTT4WWkv6E6yRKH5crlG9+N7BFf6Xk3scu29Dh2g6n3gZQSrTuMfQ==",
  "success": true
}